tests/paczka2/big_fuzzy/39168530.err
Error in line 15: 8T6 S752 30,7
Error in line 35: e0M S344 80,5
Error in line 29: 8T6 S652 57,4
Error in line 17: S344 S752 66,5
Error in line 27: XCgRhT A642 26,5
Error in line 42: S344 A642 79,2
Error in line 37: e0M S652 50,9
Error in line 39: GTZmSLlOX S752 73,0
Error in line 62: 07qADJ S344 52,5
Error in line 57: GTZmSLlOX S652 277,1
Error in line 64: 07qADJ S652 98,1
Error in line 69: 07qADJ S752 0,50
Error in line 71: GTZmSLlOX A642 47,2
Error in line 68: 07qADJ S752 0,0
Error in line 91: e0M S752 92,4
Error in line 102: e0M S652 17,9
Error in line 125: 8T6 A642 83,9
Error in line 134: 8T~ S344 85,8
Error in line 131: 8T6 S752 85,7
Error in line 142: e0M 344 77,0
Error in line 135: e0M S752 15,4
Error in line 145: XCgRhT S344 16,93
Error in line 141: S344 S652 12,5
Error in line 151: e0M S652 53,08
Error in line 146: S344 S752 90,1
Error in line 139: 8T6 S344 29,2
Error in line 149: XCgRhT S344 79,5
Error in line 184: e0M S652 432,4
Error in line 190: S344 S652 17,7
Error in line 196: McduZ2 S344 72,1
Error in line 185: 07qADJ S344 11,6
Error in line 197: McduZ2 A642 48,3
Error in line 204: XCgRhT S652 63,3
Error in line 236: S344 S652 171,83
Error in line 229: 07qADJ S752 11,9
Error in line 219: GTZmSLlOX S652 80,2
